Fix horizontal scrolling (for real this time)
Note: this makes react-virtualized less efficient at omitting rows that
don't show onscreen. I couldn't figure out a way around that.

--- a/src/react-sortable-tree.scss
+++ b/src/react-sortable-tree.scss
@@ -14,6 +14,10 @@
     }
 }
 
+:global .ReactVirtualized__Grid__innerScrollContainer {
+    overflow: visible !important;
+}
+
 :global .ReactVirtualized__Grid {
     outline: none;
 }
